Kubernetes/51-Traefik/base/resources/middleware-admin.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: chain-admin
spec:
  chain:
    middlewares:
      - name: headers-default
        namespace: traefik-system
      - name: compression
        namespace: traefik-system
      - name: ipallowlist-rfc1918
        namespace: traefik-system
