Kubernetes/51-Traefik/base/resources/middleware-dashboard.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-basicauth
spec:
  basicAuth:
    secret: traefik-dashboard-basicauth
