Kubernetes/51-Traefik/base/resources/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forwarded-headers
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: https

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: security-headers
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    frameDeny: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    referrerPolicy: strict-origin-when-cross-origin
    customFrameOptionsValue: SAMEORIGIN
    accessControlAllowHeaders:
      - 'Authorization'
      - 'Content-Type'
      - 'X-Requested-With'
      - 'X-Forwarded-For'
      - 'X-Forwarded-Proto'
      - 'Upgrade'
      - 'Connection'

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rate-limit
spec:
  rateLimit:
    average: 100
    burst: 50

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ipallowlist-rfc1918
spec:
  ipAllowList:
    sourceRange:
      - 10.0.0.0/8
      - 172.16.0.0/12
      - 192.168.0.0/16

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: compression
spec:
  compress: {}

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: chain-default
spec:
  chain:
    middlewares:
      - name: forwarded-headers
        namespace: traefik-system
      - name: security-headers
        namespace: traefik-system
      - name: rate-limit
        namespace: traefik-system
      - name: ipallowlist-rfc1918
        namespace: traefik-system
      - name: compression
        namespace: traefik-system
